Corrected order input alignment

--- a/frontend/src/pages/Order/Order.css
+++ b/frontend/src/pages/Order/Order.css
@@ -856,10 +856,6 @@
   resize: none;
 }
 
-.input-phone {
-  margin-top: 1px;
-}
-
 .empty-order {
   text-align: center;
   display: flex;
